#21 - 뷰 디자인 업데이트 및 부족했던 템플릿 추가 * 게시글 본문 가로 스크롤바 안 생기게 wrapping 적용 * css 인덴트 2 space 로 조정 * 시간 정보에 `<time>` 태그 적용 * 본문 태그를 `<pre>`로 변경 * 검색 페이지, 해시태그 전용 검색 페이지, 회원 가입 페이지 추가

--- a/project-board/src/main/resources/templates/articles/index.html
+++ b/project-board/src/main/resources/templates/articles/index.html
@@ -69,7 +69,7 @@
                     <td>첫글1</td>
                     <td>#java</td>
                     <td>kkm</td>
-                    <td>2022-01-01</td>
+                    <td><time>2022-01-02</time></td>
                 </tr>
             </tbody>
         </table>
