--- a/project-board/src/main/resources/templates/articles/detail.html
+++ b/project-board/src/main/resources/templates/articles/detail.html
@@ -9,6 +9,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="/css/articles/article-content.css" rel="stylesheet">
 </head>
 
 <body>
@@ -23,17 +24,15 @@
     <div class="row g-5">
         <section class="col-md-5 col-lg-4 order-md-last">
             <aside>
-                <p><span class="nick-name">Uno</span></p>
-                <p><a class="u-url" rel="me" href="mailto:djkehh@gmail.com">uno@mail.com</a></p>
-                <p>
-                    <time datetime="2022-01-01T00:00:00">2022-01-01</time>
-                </p>
-                <p>#java</p>
+                <p><span>Uno</span></p>
+                <p><a href="mailto:djkehh@gmail.com">uno@mail.com</a></p>
+                <p><time datetime="2022-01-01T00:00:00">2022-01-01</time></p>
+                <p><span>#java</span></p>
             </aside>
         </section>
 
         <article class="col-md-7 col-lg-8">
-            <p>본문<br><br></p>
+            <pre>본문<br><br></pre>
         </article>
     </div>
 
@@ -50,10 +49,10 @@
                 </div>
             </form>
 
-            <ul>
+            <ul class="row col-7">
                 <li>
-                    <time><small>2022-01-01</small></time>
                     <strong>kkm</strong>
+                    <small><time>2022-01-01</time></small>
                     <p>
                         Lorem insdasdq wdsad qwdsadawqdwq
                         asldqwdiqwd ksd qwdjqiw djsdkqwkdwqdq
