#37 - 뷰 템플릿의 해시태그 기능 변화 대응 * 게시글 페이지, 게시판 페이지: 해시태그에 링크를 달고, badge 스타일을 추가 * 게시글 추가 페이지: 해시태그 입력칸 삭제

--- a/project-board/src/main/resources/templates/articles/index.html
+++ b/project-board/src/main/resources/templates/articles/index.html
@@ -77,7 +77,7 @@
             <tbody>
             <tr>
                 <td class="title"><a>첫글1</a></td>
-                <td class="hashtag">#java</td>
+                <td class="hashtag"><span class="badge text-bg-secondary mx-1"><a class="text-reset">#java</a></span></td>
                 <td class="user-id">kkm</td>
                 <td class="created-at">
                     <time>2022-01-02</time>
